# Intent-Classification

./: README.md  pyproject.toml  requirements.txt  setup.sh  setup_vectordb.sh
Data/: new_intents_recommended.json
Notebook/: Data-Curation.ipynb
src/: config.py  inference.py
src/evals/: evaluator.py
src/model/: llm_manager.py  prompts.toml  setup_llm.py
src/utils/: representative_utterance_selection.py  test_search.py
src/vector_db/: __init__.py  chromadb_manager.py  setup_db.py
