[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent_classification"
version = "0.1.0"
description = "Intent classification tooling: data curation, vector DB setup, and utilities."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Rahul Nenavath" }
]
dependencies = [
  "pandas>=2.2",
  "pyarrow>=15",
  "boto3>=1.35",
  "s3fs>=2024.6.0",
  "tqdm>=4.66",
  "numpy>=1.26",
  "python-dotenv",
  "pydantic==2.12.3",
  "torch",
  "torchvision",
  "torchaudio",
  "transformers",
  "sentence-transformers",
  "accelerate",
  "peft",
  "trl",
  "datasets",
  "evaluate",
  "sentencepiece",
  "huggingface_hub",
  "wandb",
  "mlx-lm",
  "chromadb==1.3.5"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []
