[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent_classification"
version = "0.1.0"
description = "Intent classification tooling: data curation, vector DB setup, and utilities."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Rahul Nenavath" }
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []
